// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectConfig - BlankApp (Ignore react-native.config.js) 1`] = `null`;

exports[`projectConfig - BlankApp (Use react-native.config.js) 1`] = `null`;

exports[`projectConfig - MissingProjectFilesApp (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "MissingProjectFilesApp",
  "project": Object {
    "projectFile": "Error: No app project file found, please specify in react-native.config.",
  },
  "solutionFile": "Error: No app solution file found, please specify in react-native.config.",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - MissingProjectFilesApp (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "MissingProjectFilesApp",
  "project": Object {
    "projectFile": "Error: Project is required but not specified in react-native.config.",
  },
  "solutionFile": "Error: Solution file is required but not specified in react-native.config.",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - SimpleCSharpApp (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCSharpApp",
  "project": Object {
    "projectFile": "SimpleCSharpApp\\\\SimpleCSharpApp.csproj",
    "projectGuid": "{416476D5-974A-4EE2-8145-4E331297247E}",
    "projectLang": "cs",
    "projectName": "SimpleCSharpApp",
  },
  "solutionFile": "SimpleCSharpApp.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - SimpleCSharpApp (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCSharpApp",
  "project": Object {
    "projectFile": "SimpleCSharpApp\\\\SimpleCSharpApp.csproj",
    "projectGuid": "{416476D5-974A-4EE2-8145-4E331297247E}",
    "projectLang": "cs",
    "projectName": "SimpleCSharpApp",
  },
  "solutionFile": "SimpleCSharpApp.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - SimpleCppApp (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCppApp",
  "project": Object {
    "projectFile": "SimpleCppApp\\\\SimpleCppApp.vcxproj",
    "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
    "projectLang": "cpp",
    "projectName": "SimpleCppApp",
  },
  "solutionFile": "SimpleCppApp.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - SimpleCppApp (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCppApp",
  "project": Object {
    "projectFile": "SimpleCppApp\\\\SimpleCppApp.vcxproj",
    "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
    "projectLang": "cpp",
    "projectName": "SimpleCppApp",
  },
  "solutionFile": "SimpleCppApp.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithExperimentalFeaturesProps (Ignore react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "false",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithExperimentalFeaturesProps",
  "project": Object {
    "projectFile": "WithExperimentalFeaturesProps\\\\WithExperimentalFeaturesProps.vcxproj",
    "projectGuid": "{af576cbe-1aea-498d-be37-e9849a5fbf1b}",
    "projectLang": "cpp",
    "projectName": "WithExperimentalFeaturesProps",
  },
  "solutionFile": "WithExperimentalFeaturesProps.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithExperimentalFeaturesProps (Use react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "false",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithExperimentalFeaturesProps",
  "project": Object {
    "projectFile": "WithExperimentalFeaturesProps\\\\WithExperimentalFeaturesProps.vcxproj",
    "projectGuid": "{af576cbe-1aea-498d-be37-e9849a5fbf1b}",
    "projectLang": "cpp",
    "projectName": "WithExperimentalFeaturesProps",
  },
  "solutionFile": "WithExperimentalFeaturesProps.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithIndirectDependency (Ignore react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithIndirectDependency",
  "project": Object {
    "projectFile": "Error: Too many app project files found, please specify in react-native.config.",
  },
  "solutionFile": "WithIndirectDependency.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithIndirectDependency (Use react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithIndirectDependency",
  "project": Object {
    "projectFile": "WithIndirectDependency\\\\WithIndirectDependency.vcxproj",
    "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
    "projectLang": "cpp",
    "projectName": "WithIndirectDependency",
  },
  "solutionFile": "WithIndirectDependency.sln",
  "sourceDir": "windows",
  "useWinUI3": false,
}
`;

exports[`projectConfig - WithUseExperimentalNuget (Ignore react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "true",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithUseExperimentalNuget",
  "project": Object {
    "projectFile": "WithUseExperimentalNuget\\\\WithUseExperimentalNuget.vcxproj",
    "projectGuid": "{af576cbe-1aea-498d-be37-e9849a5fbf1b}",
    "projectLang": "cpp",
    "projectName": "WithUseExperimentalNuget",
  },
  "solutionFile": "WithUseExperimentalNuget.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithUseExperimentalNuget (Use react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "true",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithUseExperimentalNuget",
  "project": Object {
    "projectFile": "WithUseExperimentalNuget\\\\WithUseExperimentalNuget.vcxproj",
    "projectGuid": "{af576cbe-1aea-498d-be37-e9849a5fbf1b}",
    "projectLang": "cpp",
    "projectName": "WithUseExperimentalNuget",
  },
  "solutionFile": "WithUseExperimentalNuget.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithUseExperimentalNugetSetInProject (Ignore react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "true",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithUseExperimentalNugetSetInProject",
  "project": Object {
    "projectFile": "WithUseExperimentalNugetSetInProject\\\\WithUseExperimentalNugetSetInProject.vcxproj",
    "projectGuid": "{af576cbe-1aea-498d-be37-e9849a5fbf1b}",
    "projectLang": "cpp",
    "projectName": "WithUseExperimentalNugetSetInProject",
  },
  "solutionFile": "WithUseExperimentalNugetSetInProject.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithUseExperimentalNugetSetInProject (Use react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "true",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithUseExperimentalNugetSetInProject",
  "project": Object {
    "projectFile": "WithUseExperimentalNugetSetInProject\\\\WithUseExperimentalNugetSetInProject.vcxproj",
    "projectGuid": "{af576cbe-1aea-498d-be37-e9849a5fbf1b}",
    "projectLang": "cpp",
    "projectName": "WithUseExperimentalNugetSetInProject",
  },
  "solutionFile": "WithUseExperimentalNugetSetInProject.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithWinUI3 (Ignore react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "false",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithWinUI3",
  "project": Object {
    "projectFile": "WithWinUI3\\\\WithWinUI3.vcxproj",
    "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
    "projectLang": "cpp",
    "projectName": "WithWinUI3",
  },
  "solutionFile": "WithWinUI3.sln",
  "sourceDir": "windows",
}
`;

exports[`projectConfig - WithWinUI3 (Use react-native.config.js) 1`] = `
Object {
  "experimentalFeatures": Object {
    "UseExperimentalNuget": "false",
    "UseHermes": "false",
    "UseWinUI3": "false",
  },
  "folder": StringContaining "WithWinUI3",
  "project": Object {
    "projectFile": "WithWinUI3\\\\WithWinUI3.vcxproj",
    "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
    "projectLang": "cpp",
    "projectName": "WithWinUI3",
  },
  "solutionFile": "WithWinUI3.sln",
  "sourceDir": "windows",
  "useWinUI3": true,
}
`;

exports[`useWinUI3=true in react-native.config.js, useWinUI3=false in ExperimentalFeatures.props 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<packages>
  <package id=\\"Microsoft.ReactNative.Cxx\\" version=\\"1.0.0\\" targetFramework=\\"native\\"/>
  <package id=\\"Microsoft.ProjectReunion.WinUI\\" version=\\"0.8.0\\" targetFramework=\\"native\\"/>
</packages>"
`;

exports[`useWinUI3=true in react-native.config.js, useWinUI3=false in ExperimentalFeatures.props 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<Project xmlns=\\"http://schemas.microsoft.com/developer/msbuild/2003\\">

  <!--
    This file contains some important settings that will apply globally for
    your app and *all* native modules your app consumes. These values were
    set when you created the app project, and in some cases cannot be
    simply changed here without recreating a new project.
  -->

  <PropertyGroup Label=\\"Microsoft.ReactNative Experimental Features\\">
    <!--
      Enables default usage of Hermes.
      
      See https://microsoft.github.io/react-native-windows/docs/hermes
    -->
    <UseHermes>false</UseHermes>

    <!--
      Changes compilation to assume use of WinUI 3 instead of System XAML.
      Requires creation of new project.

      See https://microsoft.github.io/react-native-windows/docs/winui3
    -->
    <UseWinUI3>true</UseWinUI3>

    <!--
      Changes compilation to assume use of Microsoft.ReactNative NuGet packages
      instead of building the framework from source.
      Requires creation of new project.

      See https://microsoft.github.io/react-native-windows/docs/nuget
    -->
    <UseExperimentalNuget>false</UseExperimentalNuget>
  
  </PropertyGroup>

</Project>"
`;
